--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,7 +13,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Run tests
-        run: ./test.sh
+        run: bash test.sh
 
       - name: Deploy to server
         uses: appleboy/ssh-action@v1.0.3
